tests/neg/i11963b.scala
//> using options -Xfatal-warnings

open abstract class Foo // error
